# mem0-platform

./: .gitignore  PRODUCT.md  README.md  benchmark_hardware.py  demo.py  install.sh  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
deploy/production/: celery_app.py  k8s.yaml  redis_cache.py  schema.sql
deploy/production/tasks/: memory.py
deployment/: Dockerfile  docker-compose.yaml  prometheus.yml
deployment/grafana/provisioning/dashboards/: mem0-platform.json
docs/: COLD_HOT_PROBLEM.md  PRODUCTION_ARCHITECTURE.md
src/: __init__.py  api_keys.py  api_keys_enterprise.py  benchmarks.py  client.py  config.py  errors.py  health.py  observability.py  resilience.py
src/agents/: collaboration.py
src/api/: __init__.py  metrics.py
src/core/: __init__.py  hardware.py
src/mem0_agent/: __init__.py  agent.py
src/mem0_cli/: cli.py
src/memory/: __init__.py  extraction.py
src/monitoring/: metrics.py
src/runtime/: __init__.py
src/sandbox/: __init__.py  browser.py  container.py  e2b.py
src/storage/: __init__.py
src/storage/v2/: __init__.py  benchmarks.py  s3_cold_storage.py  warm_pool.py
tests/: test_api_keys_enterprise.py  test_metrics.py  test_platform.py  test_s3_cold_storage.py
