[project]
name = "mem0-platform"
version = "1.0.0"
description = "Mem0 Platform - Turn any computer into a sandbox provider"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Mem0 Team", email = "team@mem0.ai"}
]
dependencies = [
    "aiohttp>=3.9.0",
    "psutil>=5.9.0",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mem0_platform*", "mem0_agent*", "mem0_cli*", "storage*", "monitoring*"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[project.scripts]
mem0 = "mem0_cli.cli:main"
mem0-agent = "mem0_agent.agent:main"
